# 2d-minecraft

./: .gitignore  Cargo.toml  README.md  build.rs  index.html  requirements.txt  settings.yaml
ffi/: Cargo.toml
ffi/src/: ffi_config.rs  game_state.rs  lib.rs  observation.rs  observation_provider.rs
game_logic/: Cargo.toml  build.rs
game_logic/game_saves/a_star_error_15079/: field.postcard  player.postcard
game_logic/src/: game_state.rs  input_decoding.rs  lib.rs  perform_action.rs  settings.rs
game_logic/src/auxiliary/: actions.rs  animations.rs  execution_tracking.rs  i32_enum_conversions.rs  mod.rs  replay.rs
game_logic/src/character/: abilities.rs  acting_with_speed.rs  cheats.rs  game_score.rs  milestones.rs  mod.rs  p2p_interactions.rs  player.rs  start_loadouts.rs  status_effects.rs
game_logic/src/crafting/: consumable.rs  interactable.rs  inventory.rs  items.rs  material.rs  storable.rs  texture_material.rs  turret.rs
game_logic/src/gym_interface/: main.rs
game_logic/src/map_generation/: block.rs  chunk.rs  chunk_loader.rs  field.rs  field_observation.rs  mod.rs  save_load.rs  structures.rs  tile.rs
game_logic/src/map_generation/mobs/: a_star.rs  mob.rs  mob_kind.rs  spawning.rs
game_logic/tests/: abilities.rs  bane_routing.rs  block_interaction.rs  effects.rs  mob_interaction.rs  mob_moving.rs  save_load.rs  turrets.rs
game_logic/tests/common/: mod.rs
minecraft/: Cargo.toml
minecraft/src/: graphical_config.rs  input_decoding.rs  main.rs
minecraft/src/graphics/: buffers.rs  event_loop.rs  mod.rs  state.rs  texture_bind_groups.rs  vertex.rs
minecraft/src/graphics/ui/: egui_manager.rs  interactables_menu.rs  main_menu.rs
python_wrapper/: checkpoint_handler.py  env_manager.py  ffi_elements.py  main.py  measure_simulation_speed.py  minecraft_2d_env.py  muzero_wrapper.py  observation.py  past_actions_wrapper.py  read_spy_data.py  simplified_actions.py  stale_score_wrapper.py
reinforcement_learning/: config.py  evaluation.py  main.py  metrics_callback.py  muzero.py  ppo.py  sb3_eval.py  sb3_ppo.py
reinforcement_learning/conf/: config.yaml
reinforcement_learning/conf/env/: default.yaml
reinforcement_learning/conf/evaluation/: default.yaml
reinforcement_learning/conf/model/: mlp.yaml  residual.yaml
reinforcement_learning/conf/ppo/: default.yaml
reinforcement_learning/conf/train/: default.yaml
reinforcement_learning/model/: attention.py  attentive_pooler.py  feature_extractor.py  model.py  policy_network.py  ray_rl_module.py  sb3_policy.py
reinforcement_learning/muzero-general/: muzero.py  replay_buffer.py  test.py
reinforcement_learning/muzero-general/games/: cartpole.py
reinforcement_learning/muzero_general/: diagnose_model.py  models.py  replay_buffer.py  self_play.py  trainer.py
reinforcement_learning/muzero_general/games/: cartpole.py
res/chunks/: maze_chunk.txt  test_chunk.txt
src/: block.rs  cli_event_loop.rs  crafting.rs  field.rs  hash_map_storable.rs  input_decoding.rs  inventory.rs  items.rs  lib.rs  main.rs  material.rs  player.rs  settings.rs  storable.rs  tile.rs
src/auxiliary/: animations.rs
src/character/: acting_with_speed.rs  cheats.rs  mod.rs  player.rs  status_effects.rs
src/crafting/: consumable.rs  interactable.rs  inventory.rs  items.rs  material.rs  mod.rs  ranged_weapon.rs  storable.rs  texture_material.rs  turret.rs
src/ecs/: components.rs  entity.rs  mod.rs  monster_ai_system.rs
src/graphics/: buffers.rs  egui_manager.rs  event_loop.rs  instance.rs  mod.rs  shader.wgsl  state.rs  texture.rs  texture_bind_groups.rs  vertex.rs
src/graphics/ui/: egui_manager.rs  egui_renderer.rs  interactables_menu.rs  main_menu.rs  mod.rs
src/map_generation/: block.rs  chunk.rs  chunk_loader.rs  field.rs  grid_linked_list.rs  mod.rs  read_chunk.rs  save_load.rs  structures.rs  tile.rs
src/map_generation/mobs/: a_star.rs  mob.rs  mob_kind.rs  mod.rs  priority_queue.rs  spawning.rs
src/mechanics/: delayed_action.rs  mod.rs
stress_test/: Cargo.toml
stress_test/src/: main.rs
tests/: bane_routing.rs  block_interaction.rs  effects.rs  mob_interaction.rs  save_load.rs  turrets.rs
tests/common/: mod.rs
