[package]
name = "game_logic"
version = "0.1.0"
edition = "2021"

[build-dependencies.config_struct]
version = "~0.5.0"
features = ["yaml-parsing"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
text_io = "0.1.12"
rand = "0.8.5"
strum = "0.24"
strum_macros = "0.24"
winit = { version = "0.29", features = ["rwh_05"] }
env_logger = "0.9"
log = "0.4"
wgpu = "0.19.4"
pollster = "0.3.0"
bytemuck = { version = "1.14", features = [ "derive" ] }
anyhow = "1.0.77"
cgmath = "0.18"
lazy_static = "1.4.0"
config = "0.13.1"
config_struct = "0.5.0"
serde = "1.0.152"
serde_yaml = "0.9.17"

egui = "0.27.2"
egui-wgpu = "0.27.2"
egui-winit = "0.27.2"

enum-display = "0.1.3"
derivative = "2.2.0"
postcard = { version = "1.0.8", features = [ "use-std" ] }

[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg"]
