[package]
name = "game_logic"
version = "0.1.0"
edition = "2021"

[build-dependencies.config_struct]
version = "~0.5.0"
features = ["yaml-parsing"]

[dependencies]
text_io = "0.1.12"
rand = "0.8.5"
strum = "0.24"
strum_macros = "0.24"
env_logger = "0.9"
log = "0.4"
anyhow = "1.0.77"
cgmath = "0.18"
lazy_static = "1.4.0"
config = "0.13.1"
config_struct = "0.5.0"
serde = "1.0.152"
serde_yaml = "0.9.17"

enum-display = "0.1.3"
derivative = "2.2.0"
postcard = { version = "1.0.8", features = [ "use-std" ] }
chrono = "0.4.38"
