[package]
name = "minecraft"
version = "0.1.0"
edition = "2021"

[dependencies]
game_logic = { path = "../game_logic" }
rand = "0.8.5"
strum = "0.24"
strum_macros = "0.24"
winit = { version = "0.29", features = ["rwh_05"] }
env_logger = "0.9"
log = "0.4"
wgpu = "0.19.4"
pollster = "0.3.0"
bytemuck = { version = "1.14", features = [ "derive" ] }
anyhow = "1.0.77"
cgmath = "0.18"
lazy_static = "1.4.0"

egui = "0.27.2"
egui-wgpu = "0.27.2"
egui-winit = "0.27.2"

[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg"]
